--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -8,9 +8,8 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ toLower(github.repository) }}   # owner/repo all lowercase
   IMAGE_TAG: ${{ github.sha }}
-  NODE_VERSION: "18" #test
+  NODE_VERSION: "18"
 
 jobs:
   lint_and_test:
@@ -27,7 +26,6 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
 
       - name: Install dependencies
-      # if you don't have package-lock.json, npm install is fine
         run: npm install
 
       - name: Lint
@@ -51,8 +49,7 @@ jobs:
           pip install semgrep
 
       - name: Run Semgrep
-        run: |
-          semgrep --config p/ci --error
+        run: semgrep --config p/ci --error
 
   build_and_scan:
     name: Build Image & Scan with Trivy
@@ -70,18 +67,27 @@ jobs:
       - name: Login to GHCR
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ghcr.io
           username: ${{ secrets.GHCR_USERNAME }}
           password: ${{ secrets.GHCR_TOKEN }}
 
+      - name: Set lowercase vars
+        id: vars
+        run: |
+          OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+          REPO=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+
+          echo "owner=$OWNER" >> $GITHUB_OUTPUT
+          echo "repo=$REPO" >> $GITHUB_OUTPUT
+
       - name: Build image
         run: |
-          docker build -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} .
+          docker build -t ${{ env.REGISTRY }}/${{ steps.vars.outputs.repo }}:${{ env.IMAGE_TAG }} .
 
       - name: Security Scan with Trivy (Critical gate)
         uses: aquasecurity/trivy-action@0.28.0
         with:
-          image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+          image-ref: ${{ env.REGISTRY }}/${{ steps.vars.outputs.repo }}:${{ env.IMAGE_TAG }}
           severity: CRITICAL
           vuln-type: 'os,library'
           exit-code: '1'
@@ -91,5 +97,5 @@ jobs:
       - name: Push Image to GHCR
         if: success() && github.ref == 'refs/heads/main'
         run: |
-          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+          docker push ${{ env.REGISTRY }}/${{ steps.vars.outputs.repo }}:${{ env.IMAGE_TAG }}
 
